@@ -602,3 +602,7 @@
 2012-06-27  Leandro Santiago
 
 	* Fix crash when cyphering huge amount of data.
+
+2012-07-16  Cedric Bail
+
+	* Add code to detect overrun and underrun in eet_data_descriptor_element_add.
